Fixing global state variable

--- a/public/views/group/list.html
+++ b/public/views/group/list.html
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <a
-                        ng-repeat="group in groups"
+                        ng-repeat="group in global.state.group.list"
                         ng-click="Rover.browseTo.group(group)"
                         href="javascript:;"
                         class="btn btn-primary btn-metro">
