--- a/public/views/profile/create.html
+++ b/public/views/profile/create.html
@@ -21,7 +21,7 @@
 
             <!-- Profile picture -->
         	<div class="col-sm-12 col-md-4">
-                <div data-ng-include src="'views/profile/partials/upload-photo.html?' + global.assetVersion"></div>
+                <div data-ng-include="'views/profile/partials/upload-photo.html?' + global.assetVersion"></div>
         	</div>
         </div>
 
