--- a/public/views/profile/partials/details.html
+++ b/public/views/profile/partials/details.html
@@ -1,7 +1,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        {{ data.member.selected.first_name }}'s details
+        {{ global.state.profile.selected.first_name }}'s details
     </div>
 
     <div class="panel-body">
@@ -14,22 +14,22 @@
             <div
                 data-ui-editable-list-item
                 data-label="First Name"
-                data-value="data.member.selected.first_name">
+                data-value="global.state.profile.selected.first_name">
             </div>
 
             <!-- Last name -->
             <div
                 data-ui-editable-list-item
                 data-label="Last Name"
-                data-value="data.member.selected.last_name">
+                data-value="global.state.profile.selected.last_name">
             </div>
 
             <!-- Profile creation date -->
             <div
                 data-ui-editable-list-item
                 data-label="Profile created"
-                data-display="{{data.member.selected.created_at}}"
-                data-value="data.member.selected.created_at"
+                data-display="{{ global.state.profile.selected.created_at }}"
+                data-value="global.state.profile.selected.created_at"
                 data-type="date">
             </div>
 
@@ -59,35 +59,35 @@
             <div
                 data-ui-editable-list-item
                 data-label="Height"
-                data-value="data.member.selected.height_cm">
+                data-value="global.state.profile.selected.height_cm">
             </div>
 
             <!-- Weight -->
             <div
                 data-ui-editable-list-item
                 data-label="Weight"
-                data-value="data.member.selected.weight_cm">
+                data-value="global.state.profile.selected.weight_lbs">
             </div>
 
             <!-- Primary Sport -->
             <div
                 data-ui-editable-list-item
                 data-label="Primary Sport"
-                data-value="data.member.selected.primary_sport">
+                data-value="global.state.profile.selected.primary_sport">
             </div>
 
             <!-- Primary Position -->
             <div
                 data-ui-editable-list-item
                 data-label="Primary Position"
-                data-value="data.member.selected.primary_position">
+                data-value="global.state.profile.selected.primary_position">
             </div>
 
             <!-- Hand/Leg Dominance -->
             <div
                 data-ui-editable-list-item
                 data-label="Hand/Leg Dominance"
-                data-value="data.member.selected.hand_leg_dominance">
+                data-value="global.state.profile.selected.hand_leg_dominance">
             </div>
 
         </div>
