--- a/public/views/partials/breadcrumbs.html
+++ b/public/views/partials/breadcrumbs.html
@@ -10,7 +10,7 @@
             Teams
         </a>
     </li>
-    <li ng-show="currentPath == '/profile/list'">
+    <li ng-show="isProfilePage && global.state.group.selected.id > 0">
         <a class="active" href="javascript:;" ng-click="Rover.browseTo.group(global.state.group.selected)">
             {{ global.state.group.selected.name }}
         </a>
