--- a/public/views/group/partials/form.html
+++ b/public/views/group/partials/form.html
@@ -18,14 +18,12 @@
 
         <!-- Sport -->
         <div class="row form-group">
-            <div class="col-sm-4 col-md-3 text-right">
+            <div class="col-sm-4 col-md-1 text-right">
                 Sport
             </div>
-            <div class="col-sm-8 col-md-6">
-                <select ng-model="group.sportId" ng-selected="group.sportId" class="form-control">
-                    <option
-                        ng-repeat="sport in sports"
-                        value="{{ sport.id }}">
+            <div class="col-sm-8">
+                <select ng-model="group.sport_id" class="form-control" required>
+                    <option ng-repeat="sport in sports" value="{{ sport.id }}">
                         {{ sport.name }}
                     </option>
                 </select>
