--- a/public/views/profile/list.html
+++ b/public/views/profile/list.html
@@ -5,13 +5,49 @@
         <div class="col-sm-12">
 
             <!-- Breadcrumbs -->
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <div data-ng-include="'views/partials/breadcrumbs.html?' + assetVersion"></div>
             </div>
 
             <!-- Actions -->
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <div class="btn-group pull-right">
+
+                    <!-- Delete group button -->
+                    <button
+                        ng-show="group.id > 0"
+                        data-toggle="modal"
+                        data-target="#deleteGroupConfirmation"
+                        class="btn btn-danger">
+
+                        Delete <b>{{ group.name }}</b>
+                    </button>
+
+                    <!-- Delete confirmation -->
+                    <div class="modal fade" id="deleteGroupConfirmation">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <p ng-show="global.state.profile.list.length > 0">
+                                        Are you sure you want to delete <b>{{ group.name }}</b>
+                                        and the {{ global.state.profile.list.length }}
+                                        associated athletes?
+                                    </p>
+                                    <p ng-show="global.state.profile.list.length === 0">
+                                        Are you sure you want to delete <b>{{ group.name }}</b>?
+                                    </p>
+                                </div>
+                                <div class="modal-footer text-center">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                                        Cancel
+                                    </button>
+                                    <button ng-click="deleteGroup()" type="button" class="btn btn-primary" data-dismiss="modal">
+                                        Yes, delete {{ group.name }}
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <!-- Edit group button -->
                     <button
@@ -19,7 +55,7 @@
                         ng-click="Rover.browseTo.path('group/edit')"
                         class="btn btn-default">
 
-                        Edit <b>{{ group.name }}</b>
+                        Edit
                     </button>
 
                     <!-- Create profile button -->
@@ -27,7 +63,7 @@
                         ng-click="Rover.browseTo.path('profile/create')"
                         class="btn btn-default">
 
-                        Add an Athlete
+                        Add an athlete
                     </button>
                 </div>
             </div>
@@ -43,7 +79,7 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-sm-12">
-                    <div ng-hide="global.state.profile.list.length > 1">
+                    <div ng-show="global.state.profile.list.length === 0">
                         The <b>{{ group.name }}</b> do not have any
                         members yet. Add one above to get started!
                     </div>
@@ -62,6 +98,17 @@
                     </a>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Debug -->
+    <div ng-show="global.isLocal" class="panel panel-default">
+        <div class="panel-heading">
+            Debug
+        </div>
+
+        <div class="panel-body">
+            Profile list: {{ global.state.profile.list }} <br><br>
         </div>
     </div>
 </div>
