Completed CRUD buttons for athletes and teams

--- a/public/views/directive-partials/ui-editable-list-container.html
+++ b/public/views/directive-partials/ui-editable-list-container.html
@@ -1,6 +1,6 @@
 
 <!-- Used in the uiEditableListContainer directive -->
-<div class="row">
+<!-- <div class="row">
     <div class="col-sm-12 btn-group text-right">
 
         <button type="button" ng-click="delete()" ng-hide="isEditing" class="btn btn-danger">
@@ -15,7 +15,7 @@
     </div>
 </div>
 
-<br>
+<br> -->
 
 <div class="row">
     <div class="col-sm-12" ng-transclude></div>
