--- a/public/views/group/edit.html
+++ b/public/views/group/edit.html
@@ -4,7 +4,7 @@
     <!-- Breadcrumbs -->
     <div class="row">
         <div class="col-sm-12">
-            <div data-ng-include="'views/partials/breadcrumbs.html?' + assetVersion"></div>
+            <div data-ng-include="'views/partials/breadcrumbs.html?' + global.assetVersion"></div>
         </div>
     </div>
 
@@ -28,7 +28,7 @@
         <!-- Action buttons -->
         <div class="row">
             <div class="col-sm-12 text-center">
-                <button type="submit" class="btn btn-default disabled">Save Changes</button>
+                <button type="submit" class="btn btn-default">Save Changes</button>
             </div>
         </div>
     </form>
