--- a/public/views/group/list.html
+++ b/public/views/group/list.html
@@ -6,7 +6,7 @@
 
             <!-- Breadcrumbs -->
             <div class="col-sm-6">
-                <div data-ng-include="'views/partials/breadcrumbs.html?' + assetVersion"></div>
+                <div data-ng-include="'views/partials/breadcrumbs.html?' + global.assetVersion"></div>
             </div>
 
             <!-- Actions -->
