--- a/public/views/group/partials/form.html
+++ b/public/views/group/partials/form.html
@@ -18,12 +18,15 @@
 
         <!-- Sport -->
         <div class="row form-group">
-            <div class="col-sm-4 col-md-1 text-right">
+            <div class="col-sm-4 col-md-2">
                 Sport
             </div>
             <div class="col-sm-8">
                 <select ng-model="group.sport_id" class="form-control" required>
-                    <option ng-repeat="sport in sports" value="{{ sport.id }}">
+                    <option
+                        ng-repeat="sport in sports"
+                        ng-selected="sport.id === gorup.sport_id"
+                        value="{{ sport.id }}">
                         {{ sport.name }}
                     </option>
                 </select>
