--- a/public/views/profile/create.html
+++ b/public/views/profile/create.html
@@ -4,7 +4,7 @@
     <!-- Breadcrumbs -->
     <div class="row">
         <div class="col-sm-12">
-            <div data-ng-include="'views/partials/breadcrumbs.html?' + assetVersion"></div>
+            <div data-ng-include="'views/partials/breadcrumbs.html?' + global.assetVersion"></div>
         </div>
     </div>
 
