--- a/public/views/profile/edit.html
+++ b/public/views/profile/edit.html
@@ -4,14 +4,14 @@
     <!-- Breadcrumbs -->
     <div class="row">
         <div class="col-sm-12">
-            <div data-ng-include="'views/partials/breadcrumbs.html?' + assetVersion"></div>
+            <div data-ng-include="'views/partials/breadcrumbs.html?' + global.assetVersion"></div>
         </div>
     </div>
 
     <h1>Edit {{ profile.first_name }}'s details</h1>
     <br>
 
-    <form ng-submit="createProfile()">
+    <form ng-submit="submitProfileForm()">
         <div class="row">
 
             <!-- Edit form -->
@@ -25,10 +25,66 @@
         	</div>
         </div>
 
+        <div class="row">
+
+            <!-- Medical information -->
+            <div class="col-sm-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Medical Information
+                    </div>
+
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <textarea ng-model="profile.underlying_medical" class="form-control"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Previous injuries -->
+            <div class="col-sm-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Previous Injuries
+                    </div>
+
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <textarea ng-model="profile.previous_injuries" class="form-control"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Other notes -->
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-md-offset-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Other Notes
+                    </div>
+
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <textarea ng-model="profile.notes" class="form-control"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Action buttons -->
         <div class="row">
             <div class="col-sm-12 text-center">
-                <button type="submit" class="btn btn-default disabled">Save changes</button>
+                <button type="submit" class="btn btn-default">Save changes</button>
             </div>
         </div>
     </form>
