--- a/public/views/group/partials/form.html
+++ b/public/views/group/partials/form.html
@@ -25,7 +25,7 @@
                 <select ng-model="group.sport_id" class="form-control" required>
                     <option
                         ng-repeat="sport in sports"
-                        ng-selected="sport.id === gorup.sport_id"
+                        ng-selected="sport.id === group.sport_id"
                         value="{{ sport.id }}">
                         {{ sport.name }}
                     </option>
