Updates to style

--- a/public/views/profile/partials/upload-photo.html
+++ b/public/views/profile/partials/upload-photo.html
@@ -7,7 +7,9 @@
     <div class="panel-body">
 
         <!-- Demo -->
-        <div style="
+        <div
+            ng-click="Rover.alert('demo')"
+            style="
             display: block;
             margin: 0 auto;
             height: 260px;
