--- a/public/views/group/partials/upload-photo.html
+++ b/public/views/group/partials/upload-photo.html
@@ -7,12 +7,14 @@
     <div class="panel-body">
 
         <!-- Demo -->
-        <div style="
+        <div
+            ng-click="Rover.alert('demo')"
+            style="
             display: block;
             margin: 0 auto;
-            height: 120px;
-            width: 120px;
-            line-height: 120px;
+            height: 260px;
+            width: 260px;
+            line-height: 260px;
             font-size: .8em;
             text-align: center;
             cursor: pointer;
