Upgraded bootstrap to 3.3.5 + Added image upload buttons

--- a/public/views/dashboard-partials.bak/viewteammembers.bak.html
+++ b/public/views/dashboard-partials.bak/viewteammembers.bak.html
@@ -1,4 +1,4 @@
-<!--<div class="row">
+<div class="row">
 	<div class="col-sm-12">
 
 		<section class="panel panel-box">
@@ -50,7 +50,7 @@
 
 	</div>
 
-</div>-->
+</div>
 
 
 
