--- a/public/views/group/partials/upload-photo.html
+++ b/public/views/group/partials/upload-photo.html
@@ -1,26 +1,39 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        Upload a photo
+        Avatar
     </div>
 
     <div class="panel-body">
 
-        <!-- Demo -->
-        <div
-            ng-click="Rover.alert('demo')"
-            style="
-            display: block;
-            margin: 0 auto;
-            height: 260px;
-            width: 260px;
-            line-height: 260px;
-            font-size: .8em;
-            text-align: center;
-            cursor: pointer;
-            border: 1px solid #ccc;">
+        <!-- Avatar preview -->
+        <div class="row">
+            <div class="col-sm-12">
+                <img ngf-src="file" style="width: 100%">
+            </div>
+        </div>
+        <br>
 
-            Photo
+        <!-- Action buttons -->
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <button
+                    ng-hide="file"
+                    ngf-select
+                    ngf-drop
+                    ng-model="file"
+                    accept="image/*"
+                    ngf-pattern="'image/*'"
+                    ngf-capture="'camera'"
+                    ngf-min-height="100"
+                    ngf-max-size="2MB"
+                    class="btn btn-default">
+
+                    Select or drag &amp; drop a photo
+                </button>
+
+                <span ng-show="file">(demo)</span>
+            </div>
         </div>
     </div>
 </div>
