--- a/public/views/navigation.html
+++ b/public/views/navigation.html
@@ -11,7 +11,7 @@
 
         <!-- Landing page -->
         <li>
-            <a href="#/dashboard"><span>dashboard</span></a>
+            <a href="#/group/list"><span>dashboard</span></a>
         </li>
 
         <!-- Submit movement data form -->
