--- a/public/views/profile/list.html
+++ b/public/views/profile/list.html
@@ -55,7 +55,7 @@
                         ng-click="Rover.browseTo.path('group/edit')"
                         class="btn btn-default">
 
-                        Edit
+                        Edit <b>{{ group.name }}</b>
                     </button>
 
                     <!-- Create profile button -->
