--- a/public/views/profile/partials/details.html
+++ b/public/views/profile/partials/details.html
@@ -25,32 +25,10 @@
             <!-- Profile creation date -->
             <div
                 data-ui-editable-list-item
-                data-label="Profile created"
-                data-display="{{ profile.created_at }}"
+                data-label="Profile Created"
+                data-display="{{ profile.created_at_formatted }}"
                 data-value="profile.created_at"
                 data-type="date">
-            </div>
-
-            <!-- Phone -->
-            <div
-                data-ui-editable-list-item
-                data-label="Phone"
-                data-value="'+1 (514) 555-5555'">
-            </div>
-
-            <!-- Sex -->
-            <div
-                data-ui-editable-list-item
-                data-label="Sex"
-                data-value=""
-                data-type="sex">
-            </div>
-
-            <!-- Date of Birth -->
-            <div
-                data-ui-editable-list-item
-                data-label="Date of Birth"
-                data-value="">
             </div>
 
             <!-- Height -->
