Re-introduced FMS graphs to profile page + fixed fms test results submission

--- a/public/views/profile/view.html
+++ b/public/views/profile/view.html
@@ -143,8 +143,9 @@
                         </div>
 
                         <div class="panel-body">
+                            FMS Forms: {{ fmsForms }} <br><br>
                             Profile alias: {{ profile }} <br> <br>
-                            Profile global: {{ global.state.profile.selected }} <br>
+                            Profile global: {{ global.state.profile.selected }} <br> <br>
                         </div>
                     </div>
                 </div>
