Fixes to FMS forms

--- a/public/views/partials/breadcrumbs.html
+++ b/public/views/partials/breadcrumbs.html
@@ -15,7 +15,7 @@
             {{ global.state.group.selected.name }}
         </a>
     </li>
-    <li ng-show="isProfilePage && global.state.profile.selected.id > 0">
+    <li ng-show="currentPath == '/profile/view'">
         <a class="active" href="javascript:;" ng-click="Rover.browseTo.profile()">
             {{ global.state.profile.selected.first_name }}
         </a>
