--- a/public/views/profile/view.html
+++ b/public/views/profile/view.html
@@ -119,7 +119,7 @@
     </section>
 
     <!-- FMS graphs... To be reviewed -->
-    <section>
+    <section ng-show="fmsForms.length > 0">
         <div class="row">
 
             <!-- Current test -->
