Added avatars for teams and athletes

--- a/public/views/group/create.html
+++ b/public/views/group/create.html
@@ -39,8 +39,9 @@
         <div class="panel panel-default">
             <div class="panel-heading">Debug</div>
             <div class="panel-body">
-                Group data: {{ group }} <br>
-                Sports: {{ sports }}
+                Group data: {{ group }} <br><br>
+                Sports: {{ sports }} <br><br>
+                File data: {{ avatar }}
             </div>
         </div>
     </div>
