--- a/public/views/group/edit.html
+++ b/public/views/group/edit.html
@@ -39,7 +39,8 @@
         <div class="panel panel-default">
             <div class="panel-heading">Debug</div>
             <div class="panel-body">
-                Group data: {{ group }}
+                Group data: {{ group }} <br><br>
+                File data: {{ avatar }}
             </div>
         </div>
     </div>
